# MASSIVE

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
cell/: README.md  docker-compose.yaml  pyproject.toml
cell/cell/: __init__.py  api.py  artifacts.py  config.py  dev.py  hooks.py  schema_registry.py  types.py  worker.py
cell/cell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cell/cell/agents/: __init__.py  base.py  builder.py  diagnostician.py  executor.py  verifier.py
cell/cell/models/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
cell/cell/output/: __init__.py  envelope.py
cell/cell/runtime/: __init__.py  activities.py  bus.py  sampling.py  state.py  workflow.py
cell/cell/tools/: __init__.py  registry.py  sandbox.py  spec.py
cell/cell/tools/static/: __init__.py  calculator_basic.py  csv_reader.py  date_arithmetic.py  json_parser.py  statistical_tests.py
cell/cellforge/: __init__.py  api.py  cli.py
cell/configs/: default_cell.yaml  toolpath_cell.yaml
cell/tests/: __init__.py  conftest.py  test_anthropic_adapter.py  test_artifacts.py  test_builder.py  test_bus.py  test_cell_api.py  test_cli.py  test_diagnostician.py  test_executor.py  test_sampling.py  test_sandbox.py  test_state_machine.py  test_static_tools.py  test_types_config.py  test_verifier.py  test_workflow.py
examples/: document_extraction.py
examples/document_extraction/: invoice_note.txt  task.yaml
examples/tool_creation/: proprietary_invoice.txt  task.yaml
scripts/: test_structure.py
